test-data/invalid/invalid-expression.jsx
const InvalidExpression = () => (
    <Translate>
        {'foo'.toString()}
    </Translate>
);
